# snakesheets

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/snakesheets/cmd/: snakesheets.py
src/snakesheets/core/: exception.py  table.py  utils.py
src/snakesheets/test/core/: test_table.py
src/snakesheets/ui/: app.py  window.py
